--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-
-
+spring.security.user.name=admin
+spring.security.user.password=123
 spring.datasource.url=jdbc:postgresql://localhost:5432/gestionDuMateriel
 spring.datasource.username= postgres
 spring.datasource.password=123456
