--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 #spring.mail.username=choukri.akram@gmail.com
 #spring.mail.password=************
-spring.mail.username=assalifatima@gmail.com
-spring.mail.password=saadcheri
+spring.mail.usernamel=assalifatima@gmail.com
+spring.mail.password=********
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
